apps/mailcow/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mailcow-proxy
  namespace: apps
subsets:
  - addresses:
      - ip: 10.0.0.10
    ports:
      - port: 8099
